--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -1393,26 +1393,26 @@ nl_between_annotation                    = ignore   # ignore/add/remove/force
 mod_full_brace_do                        = ignore   # ignore/add/remove/force
 
 # Add or remove braces on single-line 'for' statement
-mod_full_brace_for                       = remove   # ignore/add/remove/force
+mod_full_brace_for                       = add   # ignore/add/remove/force
 
 # Add or remove braces on single-line function definitions. (Pawn)
 mod_full_brace_function                  = ignore   # ignore/add/remove/force
 
 # Add or remove braces on single-line 'if' statement. Will not remove the braces if they contain an 'else'.
-mod_full_brace_if                        = remove   # ignore/add/remove/force
+mod_full_brace_if                        = add   # ignore/add/remove/force
 
 # Make all if/elseif/else statements in a chain be braced or not. Overrides mod_full_brace_if.
 # If any must be braced, they are all braced.  If all can be unbraced, then the braces are removed.
-mod_full_brace_if_chain                  = true    # false/true
+mod_full_brace_if_chain                  = false    # false/true
 
 # Don't remove braces around statements that span N newlines
 mod_full_brace_nl                        = 2        # number
 
 # Add or remove braces on single-line 'while' statement
-mod_full_brace_while                     = remove   # ignore/add/remove/force
+mod_full_brace_while                     = add   # ignore/add/remove/force
 
 # Add or remove braces on single-line 'using ()' statement
-mod_full_brace_using                     = ignore   # ignore/add/remove/force
+mod_full_brace_using                     = add   # ignore/add/remove/force
 
 # Add or remove unnecessary paren on 'return' statement
 mod_paren_on_return                      = remove   # ignore/add/remove/force
@@ -1421,7 +1421,7 @@ mod_paren_on_return                      = remove   # ignore/add/remove/force
 mod_pawn_semicolon                       = false    # false/true
 
 # Add parens on 'while' and 'if' statement around bools
-mod_full_paren_if_bool                   = false    # false/true
+mod_full_paren_if_bool                   = true    # false/true
 
 # Whether to remove superfluous semicolons
 mod_remove_extra_semicolon               = true    # false/true
